# temporal_game_demo

./: LICENSE  README.md  app.py  package-lock.json  pyproject.toml  sample_data.json  tmp.json
assets/: sample.json  sample_data.json
data/hf/small_temporal_games_closure/test/: data-00000-of-00001.arrow  state.json
data/hf/small_temporal_games_closure/train/: data-00000-of-00001.arrow  state.json
data/hf/small_temporal_games_closure/valid/: data-00000-of-00001.arrow  state.json
data/hf/small_temporal_games_closure_2/test/: cache-2672192a26e8007f.arrow  cache-2d88088a72d418bc.arrow  cache-5f2606c43eba12a3.arrow  cache-da1dfb0bd07a1f63.arrow  data-00000-of-00001.arrow  state.json
data/hf/small_temporal_games_closure_2/train/: cache-15e24ca856bd3139.arrow  cache-49c9b59de34fe0ef.arrow  (+9 more)
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/api/: annotation.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: AnnotationBoard.js  ComparisonBoard.js  ComparisonBoard.module.css  FileUpload.js  Footer.js  GameBoard.js  GameBoard.module.css  GameOver.js  GameOver.module.css  Header.js  RelationSelector.js  RelationSelector.module.css  TextDisplay.js  TextDisplay.module.css  TextHighlighter.js
frontend/src/utils/: entityColors.js
scripts/: data_stats.py  sample_data.py
src/: base.py  constants.py  env.py  event_tagger.py  relation_classifier.py  temporal_closure.py  timex_tagger.py  utils.py
static/css/: style.css  styles.css
static/js/: game.js
templates/: index.html
test/: test_utils.py
tests/: test_env.py  test_event_tagger.py  test_relation_classifier.py  test_temporal_closure.py  test_timex_tagger.py
(+300 files in other folders)
