[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Sousa",email = "hmosousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tieval (>=0.1.9,<0.2.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
