[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Sousa",email = "hmosousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tieval (>=0.1.9,<0.2.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "py-heideltime (>=1.0.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
